--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -30,3 +30,6 @@ spring.cloud.aws.region.static=us-east-1
 spring.cloud.aws.credentials.access-key=fake-access-key
 spring.cloud.aws.credentials.secret-key=fake-secret-key
 spring.cloud.aws.sqs.endpoint=http://localhost:4566
+
+#Shogun Pedido
+shogun.lanches.pedido.url=http://localhost:8080/v1/pedidos
