--- a/infra/app/app-opaque.yaml
+++ b/infra/app/app-opaque.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: app-opaque
+  name: app-producao-opaque
 type: Opaque
 stringData:
   DB_USER: tech_user
