--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -76,7 +76,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:prod
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/shogun-lanches-producao:prod
 
   deploy:
     name: Deploy to EKS
