--- a/infra/app/app-configmap.yaml
+++ b/infra/app/app-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app-configmap
+  name: app-producao-configmap
 data:
   MYSQL_URL: jdbc:mysql://shogun-database.clehkuwl1rmr.us-east-1.rds.amazonaws.com:3306/db_soat?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
