--- a/infra/app/app-deployment.yaml
+++ b/infra/app/app-deployment.yaml
@@ -1,39 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
+  name: app-producao-deployment
   labels:
-    app: app-deployment
+    app: app-producao-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app-pod
+      app: app-producao-pod
   template:
     metadata:
       labels:
-        app: app-pod
+        app: app-producao-pod
     spec:
       serviceAccountName: rds-access-sa
       containers:
-        - name: app-container
-          image: 6soatgroup74/shogun-lanches-challenge:prod
+        - name: app-producao-container
+          image: 6soatgroup74/shogun-lanches-producao:prod
           imagePullPolicy: Always
           ports:
             - containerPort: 80
           envFrom:
             - configMapRef:
-                name: app-configmap
+                name: app-producao-configmap
           env:
             - name: DB_USER
               valueFrom:
                 secretKeyRef:
-                  name: app-opaque
+                  name: app-producao-opaque
                   key: DB_USER
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: app-opaque
+                  name: app-producao-opaque
                   key: DB_PASSWORD
           readinessProbe:
             httpGet:
