--- a/infra/app/app-nlb.yaml
+++ b/infra/app/app-nlb.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-svc-lb
+  name: app-producao-svc-lb
 spec:
   type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 30010
+      nodePort: 30013
   selector:
-    app: app-pod
+    app: app-producao-pod
