--- a/infra/app/app-pod.yaml
+++ b/infra/app/app-pod.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: app-pod
+  name: app-producao-pod
   labels:
-    app: app-pod
+    app: app-producao-pod
 spec:
   containers:
-    - name: app-container
+    - name: app-producao-container
       image: igoryy/fiap-6soat:2
       imagePullPolicy: Always
       ports:
