--- a/infra/app/app-svc.yaml
+++ b/infra/app/app-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-svc
+  name: api-producao-svc
 spec:
   type: NodePort
   ports:
@@ -9,4 +9,4 @@ spec:
       targetPort: 8080
       nodePort: 30000
   selector:
-    app: app-pod
+    app: app-producao-pod
