--- a/infra/app/app-configmap.yaml
+++ b/infra/app/app-configmap.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: app-producao-configmap
 data:
-  MYSQL_URL: jdbc:mysql://shogun-database.clehkuwl1rmr.us-east-1.rds.amazonaws.com:3306/db_soat?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+  MYSQL_URL: jdbc:mysql://shogun-producao-database.crax9dqhkq1j.us-east-1.rds.amazonaws.com:3306/db_soat_producao?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+  URL_PEDIDO: http://a59ebf99a48594bf984f99305ceed3f6-530530245.us-east-1.elb.amazonaws.com
