--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-server.port=8099
-
 spring.application.name=shogun-lanches-app
 
 #DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3308}/db_soat_producao?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER:user_main}
-spring.datasource.password=${DB_PASSWORD:user_main}
+spring.datasource.url=jdbc:mysql://shogun-producao-database.crax9dqhkq1j.us-east-1.rds.amazonaws.com:3306/db_soat_producao?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=tech_user
+spring.datasource.password=tech_password
 
 #Flyway
 spring.flyway.baseline-on-migrate=true
@@ -34,9 +32,8 @@ cognito.user-pool-id=""
 
 #SQS
 spring.cloud.aws.region.static=us-east-1
-spring.cloud.aws.credentials.access-key=fake-access-key
-spring.cloud.aws.credentials.secret-key=fake-secret-key
-spring.cloud.aws.sqs.endpoint=http://localhost:4566
+spring.cloud.aws.credentials.access-key=
+spring.cloud.aws.credentials.secret-key=
 
 #Shogun Pedido
-shogun.lanches.pedido.url=http://localhost:8080/v1/pedidos
+shogun.lanches.pedido.url=http://a59ebf99a48594bf984f99305ceed3f6-530530245.us-east-1.elb.amazonaws.com
