--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -27,9 +27,8 @@ pagbank.token=Bearer 3183fd66-0ace-443f-9c9d-b6201f1cdc06434f8c2748f39fe6a29c0e3
 
 #SQS
 spring.cloud.aws.region.static=us-east-1
-spring.cloud.aws.credentials.access-key=fake-access-key
-spring.cloud.aws.credentials.secret-key=fake-secret-key
-spring.cloud.aws.sqs.endpoint=http://localhost:4566
+spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS}
 
 #Shogun Pedido
-shogun.lanches.pedido.url=http://localhost:8080/v1/pedidos
+shogun.lanches.pedido.url=${PEDIDOS_URL}
