--- a/infra/app/app-configmap.yaml
+++ b/infra/app/app-configmap.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: app-configmap
 data:
-  MYSQL_URL: jdbc:mysql://shogun-database.clehkuwl1rmr.us-east-1.rds.amazonaws.com:3306/db_soat?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+  MYSQL_URL: jdbc:mysql://shogun-database.clehkuwl1rmr.us-east-1.rds.amazonaws.com:3306/db_soat_producao?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+  PEDIDOS_URL: http://localhost:8080/v1/pedidos
