--- a/infra/app/app-nlb.yaml
+++ b/infra/app/app-nlb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-svc-lb
+  name: app-producao-svc-lb
 spec:
   type: LoadBalancer
   ports:
@@ -9,4 +9,4 @@ spec:
       targetPort: 8080
       nodePort: 30010
   selector:
-    app: app-pod
+    app: app-producao-pod
