--- a/infra/app/app-pod.yaml
+++ b/infra/app/app-pod.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: app-pod
+  name: app-prodcuao-pod
   labels:
-    app: app-pod
+    app: app-producao-pod
 spec:
   containers:
-    - name: app-container
-      image: igoryy/fiap-6soat:2
+    - name: app-producao-container
+      image: 6soatgroup74/shogun-lanches-producao:prod
       imagePullPolicy: Always
       ports:
         - containerPort: 8080
