--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -43,8 +43,37 @@ jobs:
       - name: Run Tests
         run: mvn test
 
+  sonarcloud:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build and Test
+        run: mvn clean verify
+
+      - name: SonarCloud Scan
+        run: |
+          mvn sonar:sonar \
+          -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.projectKey=6SOATGROUP74_shogun-lanches-producao \
+          -Dsonar.organization=shogun-lanches \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.qualitygate.wait=true \
+          -Dsonar.sources=src/main \
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+          -Dsonar.branch.name=${GITHUB_REF#refs/heads/} \
+          -Dsonar.branch.target=main
+
   publish-docker-hub:
-    needs: [test, build]
+    needs: [test, build, sonarcloud]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
