--- a/pom.xml
+++ b/pom.xml
@@ -243,19 +243,18 @@
 
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.1.2</version>
 				<configuration>
 					<includes>
-						<include>/*IT.java</include>
-						<include>/*Test.java</include>
+						<include>**/*IT.java</include>
+						<include>**/*Test.java</include>
 					</includes>
 					<excludes>
 						<!-- Excluir todos os testes localizados no diretório bdd -->
-						<exclude>/bdd/</exclude>
+						<exclude>**/bdd/**</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
