--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-server.port=8099
-
 spring.application.name=shogun-lanches-app
 
 #DB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3308}/db_soat_producao?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER:user_main}
-spring.datasource.password=${DB_PASSWORD:user_main}
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 #Flyway
 spring.flyway.baseline-on-migrate=true
@@ -27,16 +25,10 @@ springdoc.paths-to-match=/v1/**
 pagbank.url=https://sandbox.api.pagseguro.com
 pagbank.token=Bearer 3183fd66-0ace-443f-9c9d-b6201f1cdc06434f8c2748f39fe6a29c0e3043e0762df8de-1401-4aa5-8bf8-de8a70fc71dc
 
-#Cognito
-cognito.region=us-east-1
-cognito.user-pool-id=""
-
-
 #SQS
 spring.cloud.aws.region.static=us-east-1
-spring.cloud.aws.credentials.access-key=fake-access-key
-spring.cloud.aws.credentials.secret-key=fake-secret-key
-spring.cloud.aws.sqs.endpoint=http://localhost:4566
+spring.cloud.aws.credentials.access-key=${AWS_ACCESS_KEY}
+spring.cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS}
 
 #Shogun Pedido
-shogun.lanches.pedido.url=http://localhost:8091/v1/pedidos
+shogun.lanches.pedido.url=${PEDIDOS_URL}
